--- a/WarehouseEcommerce/Views/Theme/University/Orders/SagePay.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/SagePay.cshtml
@@ -22,7 +22,7 @@
 <div id="main">
     <section class="nb_sec nb_prdlisting_pgsec">
         <div class="container">
-            <div class="breadCrumbtopsec">
+            <div class="breadCrumbtopsec sagepay-breadcrum">
                 <div class="nb_bread_crumbwrap">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
@@ -71,7 +71,7 @@
                                                             <input type="hidden" NAME="currency_code" value="GBP">
                                                             <input type="hidden" name="sessionKey" value="@ViewBag.AuthCode" />
 
-                                                            <div class="submitBtnwra mt-4 mb-1">
+                                                            <div class="submitBtnwra mt-3 mb-2">
                                                                 <a id="my-tokenisation-trigger" href="#" class="btnCmn">Submit</a>
                                                             </div>
                                                         }
