--- a/WarehouseEcommerce/Views/Theme/University/Orders/_CheckoutProcessPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_CheckoutProcessPartial.cshtml
@@ -2,7 +2,7 @@
 @model Ganedata.Core.Entities.Domain.CheckoutViewModel
 <section class="nb_sec nb_prdlisting_pgsec nb_sec_pb">
     <div class="container">
-        <div class="breadCrumbtopsec">
+        <div class="breadCrumbtopsec checkout-process-breadcrum">
             <div class="nb_bread_crumbwrap">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
