--- a/WarehouseEcommerce/Views/Theme/University/Orders/PayPal.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/PayPal.cshtml
@@ -23,7 +23,7 @@
 <div id="main">
     <section class="nb_sec nb_prdlisting_pgsec">
         <div class="container">
-            <div class="breadCrumbtopsec">
+            <div class="breadCrumbtopsec .paypal-breadcrum">
                 <div class="nb_bread_crumbwrap">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
