--- a/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
@@ -129,7 +129,7 @@
 }
 
 <section class="nb_sec nb_prdlisting_pgsec basket-section">
-    <div class="container">
+    <div class="">
         <div class="nb_sec checkconfirmSec">
 
             <div class="checkoutInnersec Paymentsec">
@@ -137,7 +137,7 @@
                 {
                     <h4 class="ordConfirmHead basked-heading">Basket</h4>
                 }
-                <div class="tableWrap mb-4">
+                <div class="tableWrap">
                     @if (Model.WebsiteCartItems != null && Model.WebsiteCartItems.Count > 0)
                     {
                         <table class="basketTable mb-4">
