--- a/WarehouseEcommerce/Views/Theme/University/Products/KitProductDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/KitProductDetail.cshtml
@@ -202,7 +202,7 @@
                                         </div>
                                         <div class="nb_prd_det_rightsec">
                                             <div class="footSec">
-                                                @{ var stockAvailable = Ganedata.Core.Services.Inventory.GetStockDetailByProductId(Model.ProductId); }
+                                                @{ var stockAvailable = Ganedata.Core.Services.Inventory.GetStockDetailByProductId(Model.ProductId, ViewBag.SiteId); }
                                                 @if (Model.SellPrice > 0 && Model.SellPrice.HasValue && stockAvailable > 0)
                                                 {
                                                     <div class="qty pull-left">
