--- a/WarehouseEcommerce/Views/Theme/University/Products/_KitProductAttributeDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_KitProductAttributeDetail.cshtml
@@ -11,7 +11,7 @@
                     <span class="prd_amnt">@ViewBag.CurrencySymbol@Model.SellPrice</span>
 
                     <div class="availibility">
-                        @{ var stockAvailable = Ganedata.Core.Services.Inventory.GetStockDetailByProductId(Model.ProductId); }
+                        @{ var stockAvailable = Ganedata.Core.Services.Inventory.GetStockDetailByProductId(Model.ProductId, ViewBag.SiteId); }
                         @if (stockAvailable > 0)
                         {
                             <input type="hidden" class="availablity" value="true">
